--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,14 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "10"
+    "node": "14"
   },
   "dependencies": {
-    "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4",
     "express": "^4.16.4",
-    "vuetify": "^1.3.14",
-    "vuetify-loader": "^1.0.8",
-    "@nuxtjs/pwa": "^2.6.0"
+    "firebase-admin": "^9.8.0",
+    "firebase-functions": "^3.13.2",
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
