--- a/package.json
+++ b/package.json
@@ -1,52 +1,45 @@
 {
-  "name": "nuxt-on-firebase",
-  "version": "1.0.0",
-  "description": "Project for dev.to tutorial on how to host a nuxt app on firebase",
-  "author": "KiritchoukC",
+  "name": "wasateam-test-nuxt",
+  "version": "0.1.0",
+  "description": "Wasateam interview test--use Nuxt SSR",
+  "author": "Eide",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon src/server/index.js --watch server",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node src/server/index.js",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "npm run lint",
     "build:firebase": "yarn clean && yarn build && yarn copy && cd \"functions\" && yarn",
+
     "clean": "yarn clean:public && yarn clean:functions && yarn clean:static",
     "clean:functions": "rimraf \"functions/node_modules\" && rimraf \"functions/.nuxt\"",
     "clean:public": "rimraf \"public/**/*.*!(md)\" && rimraf \"public/_nuxt\"",
     "clean:static": "rimraf \"src/static/sw.js\"",
+
     "copy": "yarn copy:nuxt && yarn copy:static",
     "copy:nuxt": "xcopy \"functions\\.nuxt\\dist\\*\" \"public\\_nuxt\\\" /E /Y",
     "copy:static": "xcopy \"src\\static\\*\" \"public\\\" /E /Y",
+
     "start:firebase": "firebase serve --only functions,hosting",
+
     "deploy": "firebase deploy --only functions,hosting"
-  },
+},
   "dependencies": {
     "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4",
+    "nuxt": "^2.15.3",
     "express": "^4.16.4",
-    "vuetify": "^1.3.14",
-    "vuetify-loader": "^1.0.8",
-    "@nuxtjs/pwa": "^2.6.0"
+    "core-js": "^3.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9",
-    "@nuxtjs/eslint-config": "^0.0.1",
-    "babel-eslint": "^8.2.1",
-    "eslint": "^5.0.1",
-    "eslint-config-standard": ">=12.0.0",
-    "eslint-plugin-import": ">=2.14.0",
-    "eslint-plugin-jest": ">=21.24.1",
-    "eslint-plugin-node": ">=7.0.1",
-    "eslint-plugin-promise": ">=4.0.1",
-    "eslint-plugin-standard": ">=4.0.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "2.6.2",
-    "prettier": "1.14.3",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "@nuxtjs/eslint-config": "^6.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-nuxt": "^2.0.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^7.7.0",
+    "fibers": "^5.0.0",
+    "prettier": "^2.2.1",
+    "sass": "^1.32.12",
+    "sass-loader": "10"
   }
 }
